--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,5 +1,6 @@
 .searchBoxContainer {
   margin-bottom: 20px;
+  margin-right: 20px;
 }
 
 .searchBoxInput {
@@ -8,4 +9,9 @@
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
+}
+
+.title {
+  margin-bottom: 10px;
+  color: #333;
 }
